--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
-    <link rel="stylesheet" href="libs/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="libs/swiper/css/swiper.css">
-    <link rel="stylesheet" href="libs/swiper/css/swiper-custom.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="libs/fontawesome/js/all.min.js"></script>
+    <link rel="stylesheet" href="./libs/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./libs/swiper/css/swiper.css">
+    <link rel="stylesheet" href="./libs/swiper/css/swiper-custom.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./libs/fontawesome/js/all.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script>
         tailwind.config = {
@@ -679,9 +679,9 @@
         duration: 1000,
     });
 </script>
-<script src="libs/swiper/js/swiper.min.js"></script>
-<script src="libs/swiper/js/swiper-custom.js"></script>
-<script src="/js/script.js"></script>
+<script src="./libs/swiper/js/swiper.min.js"></script>
+<script src="./libs/swiper/js/swiper-custom.js"></script>
+<script src="./js/script.js"></script>
 </body>
 
 </html>
