--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="/" data-pjax-state="">
                         <img class="h-12 sm:h-16 logo-header safelyLoadImage" width="119" height="48" alt="Laravel"
                              onerror="this.onerror=null; this.src='/images/placeholder.jpg';"
-                             src="/images/logo-search-grid-1x.png">
+                             src="./images/logo-search-grid-1x.png">
                     </a>
                 </h1>
             </div>
@@ -623,7 +623,7 @@
 <div class="bg-primary-500">
     <div class="max-w-screen-2xl mx-auto text-white px-4 py-6">
         <div class="py-2">
-            <img width="150" src="/images/logo-search-grid-1x.png" alt="logo">
+            <img width="150" src="./images/logo-search-grid-1x.png" alt="logo">
         </div>
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
             <div class="col-span-1 md:col-span-2">
