--- a/index.html
+++ b/index.html
@@ -359,12 +359,12 @@
                     <div class="aspect-[9/10] relative overflow-hidden rounded-tr-xl rounded-bl-xl">
                         <img class="object-cover absolute top-0 right-0 h-full"
                              src="./images/img-gm6tb75qW1Jud77Ze06rOq9x.png"
-                             alt="Xây lắp điện">
+                             alt="thi công trạm biến áp">
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
                             <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> Xây lắp điện</span>
+                                <span class="text-2xl text-white uppercase font-medium"> thi công trạm biến áp </span>
                             </div>
                         </div>
                     </div>
@@ -373,12 +373,12 @@
                     <div class="aspect-[9/10] relative overflow-hidden rounded-tr-xl rounded-bl-xl">
                         <img class="object-cover absolute top-0 right-0 h-full"
                              src="./images/img-gm6tb75qW1Jud77Ze06rOq9x.png"
-                             alt="Xây lắp điện">
+                             alt="lắp dựng cột">
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
                             <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> Xây lắp điện</span>
+                                <span class="text-2xl text-white uppercase font-medium"> lắp dựng cột </span>
                             </div>
                         </div>
                     </div>
@@ -387,12 +387,12 @@
                     <div class="aspect-[9/10] relative overflow-hidden rounded-tr-xl rounded-bl-xl">
                         <img class="object-cover absolute top-0 right-0 h-full"
                              src="./images/img-gm6tb75qW1Jud77Ze06rOq9x.png"
-                             alt="Xây lắp điện">
+                             alt="Căng dải dây dẫn">
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
                             <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> Xây lắp điện</span>
+                                <span class="text-2xl text-white uppercase font-medium"> Căng dải dây dẫn</span>
                             </div>
                         </div>
                     </div>
@@ -401,12 +401,12 @@
                     <div class="aspect-[9/10] relative overflow-hidden rounded-tr-xl rounded-bl-xl">
                         <img class="object-cover absolute top-0 right-0 h-full"
                              src="./images/img-gm6tb75qW1Jud77Ze06rOq9x.png"
-                             alt="Xây lắp điện">
+                             alt="Kéo dây">
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
                             <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> Xây lắp điện</span>
+                                <span class="text-2xl text-white uppercase font-medium"> Kéo dây </span>
                             </div>
                         </div>
                     </div>
@@ -673,7 +673,7 @@
 
 <!--Copyright-->
 <div class="bg-primary-300 py-4 px-4 text-center">
-    <p class="text-gray-300 text-sm">Copyright 2024 © <strong>Phan Trung Nguyên</strong></p>
+    <p class="text-gray-300 text-sm">Copyright 2024 © <strong>DooTech</strong></p>
 </div>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
