--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                              alt="image">
                         <div class="content text-white px-4 max-w-[750px] text-xl lg:text-3xl absolute top-[30%] lg:top-[50%] items-center justify-center">
                             Với truyền thống 60 năm trong ngành xây lắp, mang khát vọng trở thành tập đoàn hàng đầu Việt
-                            Nam về cơ sở hạ tầng, SÔNG ĐÀ 11 luôn hướng đến cuộc sống tốt đẹp hơn.
+                            Nam về cơ sở hạ tầng, Selco luôn hướng đến cuộc sống tốt đẹp hơn.
                         </div>
                     </div>
                 </div>
@@ -435,16 +435,14 @@
                 <h3 class="text-4xl font-medium mb-4" data-aos="fade-up">Công ty Cổ phần Selco – 60 năm xây dựng và
                     phát triển</h3>
                 <div class="text-gray-700" data-aos="fade-up">
-                    Tiền thân là Đội điện nước trực thuộc Công trường Thủy điện Thác Bà được ra đời sau ngày thành lập
-                    Công trường thủy điện Thác Bà (ngày 01/6/1961), năm 1972 được nâng cấp và đổi tên thành Công trường
-                    Cơ điện Thủy điện Thác Bà.
-                    Từ năm 1976 Cán bộ đoàn viên, công nhân viên Công trường Cơ điện hăng hái tham gia xây dựng công
-                    trình Nhà máy Thủy điện Hòa Bình, Công trường được đổi tên thành Xí nghiệp Lắp máy Điện nước.
-                    Năm 1984 được nâng cấp thành Công ty Xây lắp Điện nước.
-                    Từ năm 1986, khi đất nước chuyển mình sang cơ chế thị trường theo định hướng XHCN là giai đoạn khó
-                    khăn, tổn thất về lực lượng của Công ty. Với những nỗ lực không mệt mỏi, Công ty đã vượt qua để củng
-                    cố, xây dựng lực lượng bước vào một thời kỳ mới, công ty được đổi tên thành Công ty Xây lắp Năng
-                    lượng và nay là Công ty cổ phần Sông Đà11.
+                    Công ty TNHH MTV Sông Đà 11 Thăng Long (SELCO SONG DA) là đơn vị thành viên của Tổng công ty Sông Đà, đã tham gia thi công xây lăp nhiều dự án quan trọng của đất nước về thủy điện, hệ thống đường dây truyền tải điện cao thế, hệ thống cấp thoát nước trong các khu đô thị và công nghiệp…
+                    Thực hiện chủ trương sắp xếp đổi mới doanh nghiệp, trên cơ sở chức năng nhiệm vụ, lực lượng cán bộ công nhân viên, tài sản tiền vốn và trang thiết bị thi công của Xí nghiệp Sông Đà 11.2 và Xí nghiệp Sông Đà 11.5 thuộc Công ty cổ phần Sông Đà 11.
+                    Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây truyền tải điện và trạm biến áp có cấp điện áp đến 500kV, thi công lắp đặt hệ hống cơ điện, cấp thoát nước trong các tòa nhà cao tầng, khu đô thị, khu công nghiệp và nước sạch nông thôn,
+                    đầu tư các dự án thủy điện, dự án khu công nghiệp,đô thị mới.
+                    Trong những năm vừa qua (2008 – 2013) cùng với sự nỗ lực của tập thể CBCNV đơn vị đã hoàn thành xuất sắc nhiệm vụ SXKD với tổng giá trị sản lượng đạt 1.600 tỷ đồng, lợi nhuận đạt 61 tỷ đồng.
+                    Kế hoạch đến năm 2015 và định hướng đến năm 2020 của Công ty trở thành đơn vị chủ lực của Tổng công ty Sông Đà trong lĩnh vực đầu tư phát triển nguồn điện,
+                    đầu tư đô thị và hạ tầng công nghiệp đồng thời không ngừng khẳng định vị thế là nhà thầu EPC mạnh trong kĩnh vực xây lắp các công trình điện nước.
+
                 </div>
                 <div class="py-2" data-aos="fade-up">
                     <a href="#"
@@ -539,10 +537,10 @@
             <div>
                 <h3 class="text-4xl font-medium mb-4" data-aos="fade-up" data-aos-duration="1000">Quan hệ cổ đông</h3>
                 <div class="text-gray-700" data-aos="fade-up" data-aos-duration="1000">
-                    Tại Sông Đà 11, chúng tôi luôn hướng đến sự tăng trưởng bền vững, mang đến những giá trị cao nhất
+                    Tại Selco, chúng tôi luôn hướng đến sự tăng trưởng bền vững, mang đến những giá trị cao nhất
                     cho cổ đông và nhà đầu tư thông qua việc thiết lập các mối quan hệ lâu dài, xây dựng lòng tin, đối
                     xử công bằng, minh bạch, chủ động và cung cấp thông tin tới các bên liên quan. Với cam kết tăng
-                    trưởng bền vững, các kết quả kinh doanh Sông Đà 11 đạt được đều vượt xa mong đợi từ cổ đông và nhà
+                    trưởng bền vững, các kết quả kinh doanh Selco đạt được đều vượt xa mong đợi từ cổ đông và nhà
                     đầu tư.
                 </div>
                 <div>
