--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="https://qlhs.test/khoa-hoc" data-pjax-state="">Khóa học</a>
+                           href="https://qlhs.test/khoa-hoc" data-pjax-state="">Lĩnh Vực Hoạt Động</a>
                         <div class="inline-block w-1"></div>
                         <svg class="w-2.5 h-2.5 absolute top-[20px] right-1" aria-hidden="true"
                              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -93,8 +93,13 @@
                             </li>
                             <li class=" relative group border-b last:border-b-0 group/lv2">
                                 <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="https://qlhs.test/24523454">Năng lượng</a>
+                                   href="https://qlhs.test/24523454">Thi công trạm biến áp</a>
                             </li>
+                             <li class=" relative group border-b last:border-b-0 group/lv2">
+                                <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
+                                   href="https://qlhs.test/24523454">Căng dải dây dẫn</a>
+                            </li>
+                            
                         </ul>
                     </li>
                     <li class="relative group group/lv1">
