--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="https://qlhs.test/khoa-hoc" data-pjax-state="">Lĩnh Vực Hoạt Động</a>
+                           href="https://qlhs.test/khoa-hoc" data-pjax-state="">Khóa học</a>
                         <div class="inline-block w-1"></div>
                         <svg class="w-2.5 h-2.5 absolute top-[20px] right-1" aria-hidden="true"
                              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -93,13 +93,8 @@
                             </li>
                             <li class=" relative group border-b last:border-b-0 group/lv2">
                                 <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="https://qlhs.test/24523454">Thi công trạm biến áp</a>
+                                   href="https://qlhs.test/24523454">Năng lượng</a>
                             </li>
-                             <li class=" relative group border-b last:border-b-0 group/lv2">
-                                <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="https://qlhs.test/24523454">Căng dải dây dẫn</a>
-                            </li>
-                            
                         </ul>
                     </li>
                     <li class="relative group group/lv1">
@@ -264,8 +259,9 @@
                              src="./images/img-OoM3vxSbloo6OVN83KMZ6FsR.png"
                              alt="image">
                         <div class="content text-white px-4 max-w-[750px] text-xl lg:text-3xl absolute top-[30%] lg:top-[50%] items-center justify-center">
-                            Với truyền thống 60 năm trong ngành xây lắp, mang khát vọng trở thành tập đoàn hàng đầu Việt
-                            Nam về cơ sở hạ tầng, Selco luôn hướng đến cuộc sống tốt đẹp hơn.
+                            Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây truyền tải điện và trạm biến áp có cấp điện áp đến 500kV,
+                            thi công lắp đặt hệ hống cơ điện, cấp thoát nước trong các tòa nhà cao tầng, khu đô thị,
+                            khu công nghiệp và nước sạch nông thôn, đầu tư các dự án thủy điện, dự án khu công nghiệp, đô thị mới...
                         </div>
                     </div>
                 </div>
