--- a/index.html
+++ b/index.html
@@ -255,9 +255,11 @@
                              src="./images/img-OoM3vxSbloo6OVN83KMZ6FsR.png"
                              alt="image">
                         <div class="content text-white px-4 max-w-[750px] text-xl lg:text-3xl absolute top-[30%] lg:top-[50%] items-center justify-center">
-                            Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây truyền tải điện và trạm biến áp có cấp điện áp đến 500kV,
+                            Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây
+                            truyền tải điện và trạm biến áp có cấp điện áp đến 500kV,
                             thi công lắp đặt hệ hống cơ điện, cấp thoát nước trong các tòa nhà cao tầng, khu đô thị,
-                            khu công nghiệp và nước sạch nông thôn, đầu tư các dự án thủy điện, dự án khu công nghiệp, đô thị mới...
+                            khu công nghiệp và nước sạch nông thôn, đầu tư các dự án thủy điện, dự án khu công nghiệp,
+                            đô thị mới...
                         </div>
                     </div>
                 </div>
@@ -268,6 +270,17 @@
 
             </div>
         </div>
+    </div>
+    <div class="scrolldownbutton flex items-center flex-col text-white">
+        <a class="btndown flex flex-col items-center" href="#scrolldown">
+            <span class="vii-home-banner_scroll-down-arrows pointer-events-none">
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </span>
+            <span class="pointer-events-none">Kéo xuống</span>
+        </a>
+<!--        <a class="btndown" href="#scrolldown"><span>Kéo xuống</span></a>-->
     </div>
 </div>
 
@@ -346,7 +359,7 @@
 </div>
 
 <!--Lĩnh vực hoạt động-->
-<div class="mt-12">
+<div id="scrolldown" class="mt-12">
     <div class="max-w-screen-2xl mx-auto px-4">
         <div class="flex flex-col gap-4">
             <h2 class="text-3xl mb-6 font-medium" data-aos-duration="1000" data-aos="fade-up">Lĩnh vực hoạt động</h2>
@@ -431,13 +444,22 @@
                 <h3 class="text-4xl font-medium mb-4" data-aos="fade-up">Công ty Cổ phần Selco – 60 năm xây dựng và
                     phát triển</h3>
                 <div class="text-gray-700" data-aos="fade-up">
-                    Công ty TNHH MTV Sông Đà 11 Thăng Long (SELCO SONG DA) là đơn vị thành viên của Tổng công ty Sông Đà, đã tham gia thi công xây lăp nhiều dự án quan trọng của đất nước về thủy điện, hệ thống đường dây truyền tải điện cao thế, hệ thống cấp thoát nước trong các khu đô thị và công nghiệp…
-                    Thực hiện chủ trương sắp xếp đổi mới doanh nghiệp, trên cơ sở chức năng nhiệm vụ, lực lượng cán bộ công nhân viên, tài sản tiền vốn và trang thiết bị thi công của Xí nghiệp Sông Đà 11.2 và Xí nghiệp Sông Đà 11.5 thuộc Công ty cổ phần Sông Đà 11.
-                    Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây truyền tải điện và trạm biến áp có cấp điện áp đến 500kV, thi công lắp đặt hệ hống cơ điện, cấp thoát nước trong các tòa nhà cao tầng, khu đô thị, khu công nghiệp và nước sạch nông thôn,
+                    Công ty TNHH MTV Sông Đà 11 Thăng Long (SELCO SONG DA) là đơn vị thành viên của Tổng công ty Sông
+                    Đà, đã tham gia thi công xây lăp nhiều dự án quan trọng của đất nước về thủy điện, hệ thống đường
+                    dây truyền tải điện cao thế, hệ thống cấp thoát nước trong các khu đô thị và công nghiệp…
+                    Thực hiện chủ trương sắp xếp đổi mới doanh nghiệp, trên cơ sở chức năng nhiệm vụ, lực lượng cán bộ
+                    công nhân viên, tài sản tiền vốn và trang thiết bị thi công của Xí nghiệp Sông Đà 11.2 và Xí nghiệp
+                    Sông Đà 11.5 thuộc Công ty cổ phần Sông Đà 11.
+                    Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây truyền tải
+                    điện và trạm biến áp có cấp điện áp đến 500kV, thi công lắp đặt hệ hống cơ điện, cấp thoát nước
+                    trong các tòa nhà cao tầng, khu đô thị, khu công nghiệp và nước sạch nông thôn,
                     đầu tư các dự án thủy điện, dự án khu công nghiệp,đô thị mới.
-                    Trong những năm vừa qua (2008 – 2013) cùng với sự nỗ lực của tập thể CBCNV đơn vị đã hoàn thành xuất sắc nhiệm vụ SXKD với tổng giá trị sản lượng đạt 1.600 tỷ đồng, lợi nhuận đạt 61 tỷ đồng.
-                    Kế hoạch đến năm 2015 và định hướng đến năm 2020 của Công ty trở thành đơn vị chủ lực của Tổng công ty Sông Đà trong lĩnh vực đầu tư phát triển nguồn điện,
-                    đầu tư đô thị và hạ tầng công nghiệp đồng thời không ngừng khẳng định vị thế là nhà thầu EPC mạnh trong kĩnh vực xây lắp các công trình điện nước.
+                    Trong những năm vừa qua (2008 – 2013) cùng với sự nỗ lực của tập thể CBCNV đơn vị đã hoàn thành xuất
+                    sắc nhiệm vụ SXKD với tổng giá trị sản lượng đạt 1.600 tỷ đồng, lợi nhuận đạt 61 tỷ đồng.
+                    Kế hoạch đến năm 2015 và định hướng đến năm 2020 của Công ty trở thành đơn vị chủ lực của Tổng công
+                    ty Sông Đà trong lĩnh vực đầu tư phát triển nguồn điện,
+                    đầu tư đô thị và hạ tầng công nghiệp đồng thời không ngừng khẳng định vị thế là nhà thầu EPC mạnh
+                    trong kĩnh vực xây lắp các công trình điện nước.
 
                 </div>
                 <div class="py-2" data-aos="fade-up">
