--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <div class="carousel-cell">
                     <div class="relative">
                         <img class="object-cover" style="height: 100vh; width: 100vw;"
-                             src="./images/img-OoM3vxSbloo6OVN83KMZ6FsR.png"
+                             src="./images/img-3PBlkfpHbjwDaeLauUp6SOo8.png"
                              alt="image">
                         <div class="content text-white px-4 max-w-[750px] text-xl lg:text-3xl absolute top-[30%] lg:top-[50%] items-center justify-center">
                             Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây
@@ -265,7 +265,7 @@
                 </div>
                 <div class="carousel-cell">
                     <img class="object-cover" style="height: 100vh; width: 100vw;"
-                         src="./images/img-5OVaUpZCfUbKS0dBrQbPuYOq.png" alt="image">
+                         src="./images/img-MeIoau4nARCPPF5h4JOPVD99.png" alt="image">
                 </div>
 
             </div>
@@ -311,7 +311,7 @@
                                 <span class="text-xs">Tháng năm</span>
                             </div>
                             <div class="flex-1 px-2">
-                                Toàn cảnh Thủy điện Sơn La ngày về đích
+                                Toàn cảnh Trạm biến áp Sao Hỏa ngày về đích
                             </div>
                             <div class="px-4">
                                 <div role="button"
@@ -328,10 +328,10 @@
                     <div class="carousel-cell">
                         <a href="#" class="group block relative overflow-hidden rounded-tr-2xl rounded-bl-2xl">
                             <img class="group-hover:scale-110 transition-all duration-500 aspect-[10/8]"
-                                 src="./images/img-gm6tb75qW1Jud77Ze06rOq9x.png"
+                                 src="./images/img-aV7Tun36iN6nOHwWQGhiuJx0.png"
                                  alt="image">
                             <div class="absolute bottom-0 text-white p-4">
-                                <h3>Toàn cảnh Thủy điện Sơn La ngày về đích</h3>
+                                <h3>Toàn cảnh Trạm biến áp Sao Hỏa ngày về đích</h3>
                                 <div>
                                     <i class="fa-solid fa-calendar"></i>
                                     <span>14/05/2024</span>
@@ -342,9 +342,9 @@
                     <div class="carousel-cell">
                         <a href="#" class="group block relative overflow-hidden rounded-tr-2xl rounded-bl-2xl">
                             <img class="group-hover:scale-110 transition-all duration-500 aspect-[10/8]"
-                                 src="./images/img-gm6tb75qW1Jud77Ze06rOq9x.png" alt="image">
+                                 src="./images/img-aV7Tun36iN6nOHwWQGhiuJx0.png" alt="image">
                             <div class="absolute bottom-0 text-white p-4">
-                                <h3>Toàn cảnh Thủy điện Sơn La ngày về đích</h3>
+                                <h3>Toàn cảnh Trạm biến áp Sao Hỏa ngày về đích</h3>
                                 <div>
                                     <i class="fa-solid fa-calendar"></i>
                                     <span>14/05/2024</span>
@@ -373,8 +373,8 @@
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
-                            <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> thi công trạm biến áp </span>
+                            <div class="opacity-1 px-2 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
+                                <span class="text-xl lg:text-2xl text-white uppercase font-medium"> thi công trạm biến áp </span>
                             </div>
                         </div>
                     </div>
@@ -387,8 +387,8 @@
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
-                            <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> lắp dựng cột </span>
+                            <div class="opacity-1 px-2 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
+                                <span class="text-xl lg:text-2xl text-white uppercase font-medium"> lắp dựng cột </span>
                             </div>
                         </div>
                     </div>
@@ -401,8 +401,8 @@
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
-                            <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> Căng dải dây dẫn</span>
+                            <div class="opacity-1 px-2 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
+                                <span class="text-xl lg:text-2xl text-white uppercase font-medium"> Căng dải dây dẫn</span>
                             </div>
                         </div>
                     </div>
@@ -415,8 +415,8 @@
                         <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 flex absolute w-full h-full top-0 left-0 transition-all justify-center items-center bg-gray-950/50">
                         </div>
                         <div class="absolute w-full h-full top-0 left-0 flex justify-center items-center">
-                            <div class="opacity-1 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
-                                <span class="text-2xl text-white uppercase font-medium"> Kéo dây </span>
+                            <div class="opacity-1 px-2 lg:opacity-0 group-hover:opacity-100 transition-all duration-500">
+                                <span class="text-xl lg:text-2xl text-white uppercase font-medium"> Kéo dây </span>
                             </div>
                         </div>
                     </div>
