--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="/" data-pjax-state="">
                         <img class="h-16 w-16 logo-header safelyLoadImage" width="48" height="48" alt="Laravel"
                              onerror="this.onerror=null; this.src='/images/placeholder.jpg';"
-                             src="./images/logo.png">
+                             src="./images/logo5.png">
                     </a>
                 </h1>
             </div>
@@ -252,7 +252,7 @@
                 <div class="carousel-cell">
                     <div class="relative">
                         <img class="object-cover" style="height: 100vh; width: 100vw;"
-                             src="./images/img-3PBlkfpHbjwDaeLauUp6SOo8.png"
+                             src="./images/img-uVGMrJgGaq5WQkxcLz8kpvDZ.png"
                              alt="image">
                         <div class="content text-white px-4 max-w-[750px] text-xl lg:text-3xl absolute top-[30%] lg:top-[50%] items-center justify-center">
                             Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây
@@ -265,7 +265,7 @@
                 </div>
                 <div class="carousel-cell">
                     <img class="object-cover" style="height: 100vh; width: 100vw;"
-                         src="./images/img-MeIoau4nARCPPF5h4JOPVD99.png" alt="image">
+                         src="./images/img-YtxvbmqBYJXU0ycLpdoyHm8w.png" alt="image">
                 </div>
 
             </div>
@@ -639,7 +639,7 @@
 <div class="bg-primary-500">
     <div class="max-w-screen-2xl mx-auto text-white px-4 py-6">
         <div class="py-2">
-            <img width="150" src="./images/logo.png" alt="logo">
+            <img width="150" src="./images/logo5.png" alt="logo">
         </div>
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
             <div class="col-span-1 md:col-span-2">
