--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                     <ul>
                         <template x-for="i in 4">
                             <li class="border-b last:border-b-0 py-2" data-aos="fade-up" data-aos-duration="1000">
-                                <a href="#" class="hover:text-primary-500 hover:text-black font-medium py-2">
+                                <a href="#" class="hover:text-primary-500 font-medium py-2">
                                     Báo cáo Tài chính hợp nhất Quý 3 năm 2024
                                 </a>
                             </li>
