--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <div class="px-4 flex flex-col justify-center">
                 <div class="flex flex-col gap-4">
                     <div class="flex justify-between" data-aos="fade-up">
-                        <h2 class="text-3xl font-bold text-cafe">Tin mới cập nhật</h2>
+                        <h2 class="text-3xl font-bold text-cafe uppercase">Tin mới cập nhật</h2>
                         <a href="#" class="flex gap-2 py-5 text-primary-300">
                             <span>Xem tất cả</span>
                             <div class="relative w-6 h-6 flex justify-center items-center">
