--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <div class="carousel-cell">
                     <div class="relative">
                         <img class="object-cover" style="height: 100vh; width: 100vw;"
-                             src="./images/image12.jpg"
+                             src="./images/image5.jpg"
                              alt="image">
                         <div class="content text-white px-4 max-w-[750px] text-xl lg:text-3xl absolute top-[30%] lg:top-[50%] items-center justify-center">
                             Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp đường dây
@@ -265,7 +265,7 @@
                 </div>
                 <div class="carousel-cell">
                     <img class="object-cover" style="height: 100vh; width: 100vw;"
-                         src="./images/51c2b7ac26a29dfcc4b3.jpg" alt="image">
+                         src="./images/image4.jpg" alt="image">
                 </div>
 
             </div>
