--- a/lichsu.html
+++ b/lichsu.html
@@ -53,7 +53,7 @@
 <body>
 <!--Header menu-->
 <header x-data="{openMobile: false}"
-        class="bg-gray-100/50 shadow transition-all duration-300 sticky w-full top-0 z-40 menu_header">
+        class="bg-gray-100 shadow transition-all duration-300 sticky w-full top-0 z-40 menu_header">
     <div class="mx-auto max-w-screen-2xl px-4">
         <div class="flex justify-between space-x-6 items-center py-2 lg:py-0">
             <div class="items-center flex">
@@ -90,15 +90,15 @@
                             </li>
                             <li class=" relative group border-b last:border-b-0 group/lv2">
                                 <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="./introduce.html">Lịch sử hoàn thành</a>
+                                   href="./lichsu.html">Lịch sử hoàn thành</a>
                             </li>
                             <li class=" relative group border-b last:border-b-0 group/lv2">
                                 <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="./introduce.html">Cơ cấu tổ chức</a>
+                                   href="./cocau.html">Cơ cấu tổ chức</a>
                             </li>
                             <li class=" relative group border-b last:border-b-0 group/lv2">
                                 <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-green-500 text-green-500 hover:text-green-700 p-3"
-                                   href="./introduce.html">Thành tích đạt được</a>
+                                   href="./thanhtich.html">Thành tích đạt được</a>
                             </li>
 
                         </ul>
