--- a/lichsu.html
+++ b/lichsu.html
@@ -279,16 +279,19 @@
 <!--Menu-->
 <div data-aos-duration="1000" data-aos="fade-up">
     <div class="flex justify-center items-center py-6 gap-2">
-        <a href="./introduce.html" class="rounded bg-gray-100 hover:bg-primary-500 hover:text-white uppercase px-6 py-2 font-medium">
+        <a href="./introduce.html"
+           class="rounded bg-gray-100 hover:bg-primary-500 hover:text-white uppercase px-6 py-2 font-medium">
             Giới thiệu
         </a>
         <a href="./lichsu.html" class="rounded text-white bg-primary-500 uppercase px-6 py-2 font-medium">
             Lịch sử hình thành
         </a>
-        <a href="./cocau.html" class="rounded bg-gray-100 hover:bg-primary-500 hover:text-white uppercase px-6 py-2 font-medium">
+        <a href="./cocau.html"
+           class="rounded bg-gray-100 hover:bg-primary-500 hover:text-white uppercase px-6 py-2 font-medium">
             Cơ cấu tổ chức
         </a>
-        <a href="./thanhtich.html" class="rounded bg-gray-100 hover:bg-primary-500 hover:text-white uppercase px-6 py-2 font-medium">
+        <a href="./thanhtich.html"
+           class="rounded bg-gray-100 hover:bg-primary-500 hover:text-white uppercase px-6 py-2 font-medium">
             Thành tích đạt được
         </a>
     </div>
@@ -302,45 +305,24 @@
     </div>
     <div class="flex-1" data-aos-duration="1000" data-aos="fade-left">
         <p class="my-4">
-            Công ty cổ phần Sông Đà 11 tiền thân là một Đội điện nước thuộc Tổng Công ty Xây dựng Thuỷ điện Thác Bà do Bộ
-            Kiến trúc thành lập từ năm 1961, đến năm 1973 được nâng cấp thành Công trường Cơ điện. Năm 1976 theo Quyết định
-            của Bộ Xây dựng, chuyển đơn vị về Thị xã Hoà Bình để chuẩn bị cho khởi công Nhà máy Thuỷ điện Hoà Bình trên Sông
-            Đà và được đổi tên là “Xí nghiệp Lắp máy Điện nước” thuộc Tổng Công ty Xây dựng Thuỷ điện Sông Đà.
+            Công ty TNHH MTV Sông Đà 11 Thăng Long (SELCO SONG DA) là đơn vị thành viên của Tổng công ty Sông Đà, đã tham
+            gia thi công xây lăp nhiều dự án quan trọng của đất nước về thủy điện, hệ thống đường dây truyền tải điện cao
+            thế, hệ thống cấp thoát nước trong các khu đô thị và công nghiệp…
         </p>
-
         <p class="my-4">
-            Công ty cổ phần Sông Đà 11 tiền thân là một Đội điện nước thuộc Tổng Công ty Xây dựng Thuỷ điện Thác Bà do Bộ
-            Kiến trúc thành lập từ năm 1961, đến năm 1973 được nâng cấp thành Công trường Cơ điện. Năm 1976 theo Quyết định
-            của Bộ Xây dựng, chuyển đơn vị về Thị xã Hoà Bình để chuẩn bị cho khởi công Nhà máy Thuỷ điện Hoà Bình trên Sông
-            Đà và được đổi tên là “Xí nghiệp Lắp máy Điện nước” thuộc Tổng Công ty Xây dựng Thuỷ điện Sông Đà.Đến năm 1989
-            theo Quyết định số 03/TCT-TCLĐ ngày 12/12/1989 của Tổng Giám đốc Tổng Công ty, Xí nghiệp Lắp máy Điện nước được
-            nâng cấp lên thành Công ty Xây lắp Điện nước. Năm 1993 theo Quyết định của Bộ trưởng Bộ Xây dựng, Công ty Xây
-            lắp Điện nước được đổi tên thành “Công ty Xây lắp Năng lượng” thuộc Tổng Công ty Xây dựng Thuỷ điện Sông Đà.
-            Ngày 11/3/2002 Bộ Xây dựng có quyết định số 285/QĐ đổi tên thành Công ty Sông Đà 11. Thực hiện Nghị quyết TW 3
-            về đổi mới và sắp xếp lại doanh nghiệp Nhà nước, ngày 17/8/2004 Bộ Xây dựng đã có quyết định số 1332/QĐ-BXD về
-            việc chuyển Công ty Sông Đà 11 thuộc Tổng Công ty Sông Đà thành Công ty cổ phần Sông Đà 11.
+            Thực hiện chủ trương sắp xếp đổi mới doanh nghiệp, trên cơ sở chức năng nhiệm vụ, lực lượng cán bộ công nhân
+            viên, tài sản tiền vốn và trang thiết bị thi công của Xí nghiệp Sông Đà 11.2 và Xí nghiệp Sông Đà 11.5 thuộc
+            Công ty cổ phần Sông Đà 11. Công ty chính thức thành lập ngày 04 tháng 07 năm 2008 với chuyên ngành xây lắp
+            đường dây truyền tải điện và trạm biến áp có cấp điện áp đến 500kV, thi công lắp đặt hệ hống cơ điện, cấp thoát
+            nước trong các tòa nhà cao tầng, khu đô thị, khu công nghiệp và nước sạch nông thôn, đầu tư các dự
+            án thủy điện, dự án khu công nghiệp, đô thị mới.
         </p>
-
         <p class="my-4">
-            Là một đơn vị thành viên qua hơn 45 năm phát triển và trưởng thành cùng Tổng Công ty Sông Đà, Công ty cổ phần
-            Sông Đà 11 đã tích luỹ được nhiều kinh nghiệm trong lĩnh vực thi công xây lắp và điều hành sản xuất. Đến nay,
-            Công ty đã có một đội ngũ hơn 1200 cán bộ kỹ thuật, cử nhân, công nhân lành nghề (trong đó có hơn 250 cán bộ kỹ
-            thuật có trình độ đại học và trên đại học).
-        </p>
-
-        <p class="my-4">
-            Định hướng và mục tiêu phát triển trong giai đoạn 2005 – 2010 của Công ty là xây dựng và phát triển thành một
-            đơn vị mạnh, lấy hiệu quả Kinh tế – Xã hội làm thước đo chủ yếu cho sự phát triển bền vững. Phát huy ngành nghề
-            truyền thống của Công ty, tăng cường đoàn kết, tích cực đổi mới, thực hiện đa dạng hoá ngành nghề, đa dạng hoá
-            sản phẩm. Tăng nhanh giá trị sản xuất công nghiệp và kinh doanh đô thị nhà ở. Lấy sản xuất kinh doanh điện nước;
-            kinh doanh nhà ở đô thị, thí nghiệm hiệu chỉnh nhà máy điện, chế tạo sản xuất vật tư thiết bị điện làm sản phẩm
-            chính để đầu tư phát triển. Xây dựng đội ngũ cán bộ công nhân viên có trình độ chuyên môn, kỹ thuật cao. Phấn
-            đấu vì sự phát triển bền vững của Công ty và Tổng Công ty Sông Đà, không ngừng nâng cao cổ tức cho cổ đông.
-        </p>
-
-        <p class="my-4">
-            Công ty hiện có trụ sở tại Tầng 7 Toà nhà hỗn hợp Sông Đà – Hà Đông, số 131 đường Trần Phú, Phường Văn Quán –
-            Quận Hà Đông – Tp Hà Nội.
+            Trong những năm vừa qua (2008 – 2013) cùng với sự nỗ lực của tập thể CBCNV đơn vị đã hoàn thành xuất sắc nhiệm
+            vụ SXKD với tổng giá trị sản lượng đạt 1.600 tỷ đồng, lợi nhuận đạt 61 tỷ đồng. Kế hoạch đến năm 2015 và định
+            hướng đến năm 2020 của Công ty trở thành đơn vị chủ lực của Tổng công ty Sông Đà trong lĩnh vực đầu tư phát
+            triển nguồn điện, đầu tư đô thị và hạ tầng công nghiệp đồng thời không ngừng khẳng định vị thế là nhà thầu EPC
+            mạnh trong kĩnh vực xây lắp các công trình điện nước.
         </p>
     </div>
 </div>
