--- a/cocau.html
+++ b/cocau.html
@@ -360,8 +360,8 @@
         <div class="carousel-cell">
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
                 <div class="col-span-8 flex flex-col justify-center max-w-2xl">
-                    <h3 class="font-medium text-lg">Phan Trung Nguyên</h3>
-                    <p class="text-red-500 text-sm">Chủ tịch HĐQT Công Ty</p>
+                    <h3 class="font-medium text-lg">Ông Vi Giang Khu</h3>
+                    <p class="text-red-500 text-sm">Tổng giám đốc</p>
                     <p class="my-4"><strong>Năm sinh:</strong> 1992</p>
                     <p class="my-4"><strong>Trình độ:</strong> vỡ lòng</p>
                 </div>
@@ -380,8 +380,8 @@
         <div class="carousel-cell">
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
                 <div class="col-span-8 flex flex-col justify-center max-w-2xl">
-                    <h3 class="font-medium text-lg">Phan Trung Nguyên</h3>
-                    <p class="text-red-500 text-sm">Chủ tịch HĐQT Công Ty</p>
+                    <h3 class="font-medium text-lg">Ông Vi Giang Khu</h3>
+                    <p class="text-red-500 text-sm">Tổng giám đốc</p>
                     <p class="my-4"><strong>Năm sinh:</strong> 1992</p>
                     <p class="my-4"><strong>Trình độ:</strong> vỡ lòng</p>
                 </div>
