--- a/index.html
+++ b/index.html
@@ -467,10 +467,9 @@
                 </div>
             </div>
             <div class="px-4">
-                <h3 class="text-4xl font-medium mb-4" data-aos="fade-up">Công ty Cổ phần Selco – 60 năm xây dựng và
-                    phát triển</h3>
+                <h3 class="text-4xl font-medium mb-4" data-aos="fade-up">Công ty TNHH MTV Sông Đà 11 Thăng Long</h3>
                 <div class="text-gray-700" data-aos="fade-up">
-                    Công ty TNHH MTV Sông Đà 11 Thăng Long (SELCO SONG DA) là đơn vị thành viên của Tổng công ty Sông
+                    Công ty TNHH MTV Sông Đà 11 Thăng Long là đơn vị thành viên của Tổng công ty Sông
                     Đà, đã tham gia thi công xây lăp nhiều dự án quan trọng của đất nước về thủy điện, hệ thống đường
                     dây truyền tải điện cao thế, hệ thống cấp thoát nước trong các khu đô thị và công nghiệp…
                     Thực hiện chủ trương sắp xếp đổi mới doanh nghiệp, trên cơ sở chức năng nhiệm vụ, lực lượng cán bộ
