--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="https://qlhs.test/lien-he" data-pjax-state="">Liên hệ</a>
+                           href="./contact.html" data-pjax-state="">Liên hệ</a>
                     </li>
                 </ul>
                 <!-- End Menu Main -->
