--- a/contact.html
+++ b/contact.html
@@ -273,7 +273,7 @@
 
 <!--Banner-->
 <div>
-    <img src="../images/banner-lien-he.jpg" alt="" class="w-full">
+    <img src="./images/banner-lien-he.jpg" alt="" class="w-full">
 </div>
 
 <div class="my-10 grid grid-cols-2 gap-8 mx-auto max-w-screen-2xl px-4">
