--- a/introduce.html
+++ b/introduce.html
@@ -273,7 +273,7 @@
 
 <!--Banner-->
 <div>
-    <img src="./images/banner-lien-he.jpg" alt="" class="w-full">
+    <img src="./images/sl001.jpg" alt="" class="w-full">
 </div>
 
 <!--Menu-->
