--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="https://qlhs.test/blog/uncategorized" data-pjax-state="">Tin tức</a>
+                           href="./tin-tuc.html" data-pjax-state="">Tin tức</a>
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
@@ -245,7 +245,7 @@
 
                         </div>
                         <div>
-                            <a x-on:click="openMobile = !openMobile" href="https://qlhs.test/blog/uncategorized"
+                            <a x-on:click="openMobile = !openMobile" href="./tin-tuc.html"
                                class="-m-3 px-3 py-2 flex items-center rounded-md hover:bg-gray-50" data-pjax-state="">
                                         <span class="text-sm font-medium text-gray-900 h-8 leading-8">
                                             Tin tức
