--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
-                           href="./tin-tuc.html" data-pjax-state="">Tin tức</a>
+                           href="https://qlhs.test/blog/uncategorized" data-pjax-state="">Tin tức</a>
                     </li>
                     <li class="relative group group/lv1">
                         <a class="text-base font-bold group-[.sub-menu]:text-gray-600 group-[.sub-menu]:py-1 group-[.sub-menu]:block inline-block group-[.sub-menu]:hover:text-gray-700 text-gray-700 hover:text-green-700 p-3"
@@ -245,7 +245,7 @@
 
                         </div>
                         <div>
-                            <a x-on:click="openMobile = !openMobile" href="./tin-tuc.html"
+                            <a x-on:click="openMobile = !openMobile" href="https://qlhs.test/blog/uncategorized"
                                class="-m-3 px-3 py-2 flex items-center rounded-md hover:bg-gray-50" data-pjax-state="">
                                         <span class="text-sm font-medium text-gray-900 h-8 leading-8">
                                             Tin tức
@@ -668,10 +668,10 @@
         </div>
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
             <div class="col-span-1 md:col-span-2">
-                <h3 class="text-xl font-medium uppercase">CÔNG TY DooTech</h3>
-                <p>số 9 ngách 2 ngõ 599 P.Văn Quán, Q. Hà Đông</p>
-                <p>Hotline: 0988 888 888</p>
-                <p>Email: vuquangthieu1307@gmail.com</p>
+                <h3 class="text-xl font-medium uppercase">Công Ty TNHH MTV Sông Đà 11 Thăng Long</h3>
+                <p>BT03 - VT24 - KĐT mới Xa La - Phường Phúc La - Quận Hà Đông - TP. Hà Nội</p>
+                <p>Hotline: (024) 8588 7666, (024) 33554511</p>
+                <p>Email: songda11thanglong@gmail.com</p>
             </div>
             <div>
                 <h3 class="text-xl font-medium uppercase">About us</h3>
